--- a/rinha-2025-rafael/rinha-2025-rafael.csproj
+++ b/rinha-2025-rafael/rinha-2025-rafael.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="nginx.conf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
