--- a/rinha-2025-rafael/rinha-2025-rafael.csproj
+++ b/rinha-2025-rafael/rinha-2025-rafael.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.58" />
   </ItemGroup>
 
 </Project>
