--- a/rinha-2025-rafael/appsettings.json
+++ b/rinha-2025-rafael/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PaymentProcessorUri": {
+    "Default": "http://payment-processor-default:8080",
+    "Fallback": "http://payment-processor-fallback:8080"
+  }
 }
